js/js.translator/testData/incremental/invalidation/nestedClassWithCrossModuleInliner/lib1/l1.3.kt
data class MyClass(val unusedField: String) {
    class NestedClass {
        inline fun foo() = 1
    }

    fun unusedFunction() = -1
}
